// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order Customer complete customer matches snapshot 1`] = `
<section>
  <ListGroup
    tag="ul"
  >
    <ul
      className="list-group"
    >
      <ListGroupItem
        tag="li"
      >
        <li
          className="list-group-item"
        >
          <Field
            component={[Function]}
            invalidClassName="is-invalid"
            name="email"
            placeholder="Email"
            type="email"
          >
            <Input
              className=""
              key="email"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="Email"
              type="email"
              value="nick@example.com"
            >
              <input
                className="form-control"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Email"
                type="email"
                value="nick@example.com"
              />
            </Input>
          </Field>
          <ErrorsFor
            component={[Function]}
            field="email"
          />
        </li>
      </ListGroupItem>
      <ListGroupItem
        tag="li"
      >
        <li
          className="list-group-item"
        >
          <Field
            component={[Function]}
            invalidClassName="is-invalid"
            name="firstName"
            placeholder="First Name"
            type="text"
          >
            <Input
              className=""
              key="firstName"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="First Name"
              type="text"
              value="Nick"
            >
              <input
                className="form-control"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="First Name"
                type="text"
                value="Nick"
              />
            </Input>
          </Field>
          <ErrorsFor
            component={[Function]}
            field="firstName"
          />
        </li>
      </ListGroupItem>
      <ListGroupItem
        tag="li"
      >
        <li
          className="list-group-item"
        >
          <Field
            component={[Function]}
            invalidClassName="is-invalid"
            name="lastName"
            placeholder="Last Name"
            type="text"
          >
            <Input
              className=""
              key="lastName"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="Last Name"
              type="text"
              value="Smith"
            >
              <input
                className="form-control"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Last Name"
                type="text"
                value="Smith"
              />
            </Input>
          </Field>
          <ErrorsFor
            component={[Function]}
            field="lastName"
          />
        </li>
      </ListGroupItem>
      <ListGroupItem
        tag="li"
      >
        <li
          className="list-group-item"
        >
          <Field
            component={[Function]}
            invalidClassName="is-invalid"
            name="zip"
            placeholder="Zip Code"
            type="text"
          >
            <Input
              className=""
              key="zip"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="Zip Code"
              type="text"
              value=""
            >
              <input
                className="form-control"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Zip Code"
                type="text"
                value=""
              />
            </Input>
          </Field>
          <ErrorsFor
            component={[Function]}
            field="zip"
          />
        </li>
      </ListGroupItem>
    </ul>
  </ListGroup>
</section>
`;

exports[`Order Customer customer errors matches snapshot 1`] = `
<section>
  <ListGroup
    tag="ul"
  >
    <ul
      className="list-group"
    >
      <ListGroupItem
        tag="li"
      >
        <li
          className="list-group-item"
        >
          <Field
            component={[Function]}
            invalidClassName="is-invalid"
            name="email"
            placeholder="Email"
            type="email"
          >
            <Input
              className="is-invalid"
              key="email"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="Email"
              type="email"
              value=""
            >
              <input
                className="is-invalid form-control"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Email"
                type="email"
                value=""
              />
            </Input>
          </Field>
          <ErrorsFor
            component={[Function]}
            field="email"
          >
            <FormFeedback
              key="email"
              tag="div"
            >
              <div
                className="invalid-feedback"
              >
                <span
                  key="blank"
                >
                  Email cannot be blank.
                </span>
              </div>
            </FormFeedback>
          </ErrorsFor>
        </li>
      </ListGroupItem>
      <ListGroupItem
        tag="li"
      >
        <li
          className="list-group-item"
        >
          <Field
            component={[Function]}
            invalidClassName="is-invalid"
            name="firstName"
            placeholder="First Name"
            type="text"
          >
            <Input
              className="is-invalid"
              key="firstName"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="First Name"
              type="text"
              value=""
            >
              <input
                className="is-invalid form-control"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="First Name"
                type="text"
                value=""
              />
            </Input>
          </Field>
          <ErrorsFor
            component={[Function]}
            field="firstName"
          >
            <FormFeedback
              key="firstName"
              tag="div"
            >
              <div
                className="invalid-feedback"
              >
                <span
                  key="blank"
                >
                  First Name cannot be blank.
                </span>
              </div>
            </FormFeedback>
          </ErrorsFor>
        </li>
      </ListGroupItem>
      <ListGroupItem
        tag="li"
      >
        <li
          className="list-group-item"
        >
          <Field
            component={[Function]}
            invalidClassName="is-invalid"
            name="lastName"
            placeholder="Last Name"
            type="text"
          >
            <Input
              className="is-invalid"
              key="lastName"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="Last Name"
              type="text"
              value=""
            >
              <input
                className="is-invalid form-control"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Last Name"
                type="text"
                value=""
              />
            </Input>
          </Field>
          <ErrorsFor
            component={[Function]}
            field="lastName"
          >
            <FormFeedback
              key="lastName"
              tag="div"
            >
              <div
                className="invalid-feedback"
              >
                <span
                  key="blank"
                >
                  Last Name cannot be blank.
                </span>
              </div>
            </FormFeedback>
          </ErrorsFor>
        </li>
      </ListGroupItem>
      <ListGroupItem
        tag="li"
      >
        <li
          className="list-group-item"
        >
          <Field
            component={[Function]}
            invalidClassName="is-invalid"
            name="zip"
            placeholder="Zip Code"
            type="text"
          >
            <Input
              className=""
              key="zip"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="Zip Code"
              type="text"
              value=""
            >
              <input
                className="form-control"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Zip Code"
                type="text"
                value=""
              />
            </Input>
          </Field>
          <ErrorsFor
            component={[Function]}
            field="zip"
          />
        </li>
      </ListGroupItem>
    </ul>
  </ListGroup>
</section>
`;

exports[`Order Customer on change matches snapshot 1`] = `
<section>
  <ListGroup
    tag="ul"
  >
    <ul
      className="list-group"
    >
      <ListGroupItem
        tag="li"
      >
        <li
          className="list-group-item"
        >
          <Field
            component={[Function]}
            invalidClassName="is-invalid"
            name="email"
            placeholder="Email"
            type="email"
          >
            <Input
              className=""
              key="email"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="Email"
              type="email"
              value="nick@example.com"
            >
              <input
                className="form-control"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Email"
                type="email"
                value="nick@example.com"
              />
            </Input>
          </Field>
          <ErrorsFor
            component={[Function]}
            field="email"
          />
        </li>
      </ListGroupItem>
      <ListGroupItem
        tag="li"
      >
        <li
          className="list-group-item"
        >
          <Field
            component={[Function]}
            invalidClassName="is-invalid"
            name="firstName"
            placeholder="First Name"
            type="text"
          >
            <Input
              className=""
              key="firstName"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="First Name"
              type="text"
              value=""
            >
              <input
                className="form-control"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="First Name"
                type="text"
                value=""
              />
            </Input>
          </Field>
          <ErrorsFor
            component={[Function]}
            field="firstName"
          />
        </li>
      </ListGroupItem>
      <ListGroupItem
        tag="li"
      >
        <li
          className="list-group-item"
        >
          <Field
            component={[Function]}
            invalidClassName="is-invalid"
            name="lastName"
            placeholder="Last Name"
            type="text"
          >
            <Input
              className=""
              key="lastName"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="Last Name"
              type="text"
              value=""
            >
              <input
                className="form-control"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Last Name"
                type="text"
                value=""
              />
            </Input>
          </Field>
          <ErrorsFor
            component={[Function]}
            field="lastName"
          />
        </li>
      </ListGroupItem>
      <ListGroupItem
        tag="li"
      >
        <li
          className="list-group-item"
        >
          <Field
            component={[Function]}
            invalidClassName="is-invalid"
            name="zip"
            placeholder="Zip Code"
            type="text"
          >
            <Input
              className=""
              key="zip"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="Zip Code"
              type="text"
              value=""
            >
              <input
                className="form-control"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Zip Code"
                type="text"
                value=""
              />
            </Input>
          </Field>
          <ErrorsFor
            component={[Function]}
            field="zip"
          />
        </li>
      </ListGroupItem>
    </ul>
  </ListGroup>
</section>
`;
